TP3/parser.output
Terminals unused in grammar

   OPERADOR_DE_ASIGNACION
   '~'
   '!'


Gramática

    0 $accept: unidad_de_traduccion $end

    1 unidad_de_traduccion: declaracion_externa
    2                     | unidad_de_traduccion declaracion_externa

    3 declaracion_externa: definicion_de_funcion
    4                    | declaracion

    5 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaraciones proposicion_compuesta
    6                      | especificadores_de_declaracion declarador proposicion_compuesta
    7                      | declarador lista_de_declaraciones proposicion_compuesta
    8                      | declarador proposicion_compuesta

    9 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   10            | especificadores_de_declaracion ';'

   11 lista_de_declaraciones: declaracion
   12                       | lista_de_declaraciones declaracion

   13 especificadores_de_declaracion: especificador_de_categoria_de_almacenamiento opt_especificadores_de_declaracion
   14                               | especificador_de_tipo opt_especificadores_de_declaracion
   15                               | CALIFICADOR_DE_TIPO opt_especificadores_de_declaracion

   16 especificador_de_categoria_de_almacenamiento: AUTO
   17                                             | REGISTER
   18                                             | STATIC
   19                                             | EXTERN
   20                                             | TYPEDEF

   21 opt_especificadores_de_declaracion: especificadores_de_declaracion
   22                                   | /* vacío */

   23 especificador_de_tipo: TIPO_DE_DATO
   24                      | especificador_estructura_o_union
   25                      | especificador_enum

   26 especificador_estructura_o_union: STRUCT_O_UNION IDENTIFICADOR '{' lista_declaraciones_struct '}'
   27                                 | STRUCT_O_UNION '{' lista_declaraciones_struct '}'
   28                                 | STRUCT_O_UNION IDENTIFICADOR

   29 lista_declaraciones_struct: declaracion_struct
   30                           | lista_declaraciones_struct declaracion_struct

   31 lista_declaradores_init: declarador_init
   32                        | lista_declaradores_init ',' declarador_init

   33 declarador_init: declarador
   34                | declarador '=' inicializador

   35 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   36 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   37                                | especificador_de_tipo
   38                                | CALIFICADOR_DE_TIPO lista_calificador_especificador
   39                                | CALIFICADOR_DE_TIPO

   40 lista_declaradores_struct: declarador_struct
   41                          | lista_declaradores_struct ',' declarador_struct

   42 declarador_struct: declarador

   43 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   44                   | ENUM '{' lista_de_enumerador '}'
   45                   | ENUM IDENTIFICADOR

   46 lista_de_enumerador: enumerador
   47                    | lista_de_enumerador ',' enumerador

   48 enumerador: IDENTIFICADOR
   49           | IDENTIFICADOR '=' expresion_constante

   50 declarador: apuntador declarador_directo
   51           | declarador_directo

   52 declarador_directo: IDENTIFICADOR
   53                   | '(' declarador ')'
   54                   | declarador_directo '[' expresion_constante ']'
   55                   | declarador_directo '[' ']'
   56                   | declarador_directo '(' lista_tipos_de_parametro ')'
   57                   | declarador_directo '(' lista_de_identificadores ')'
   58                   | declarador_directo '(' ')'

   59 apuntador: '*' opt_lista_calificadores_de_tipo
   60          | '*' opt_lista_calificadores_de_tipo apuntador

   61 opt_lista_calificadores_de_tipo: lista_calificadores_de_tipo
   62                                | /* vacío */

   63 lista_calificadores_de_tipo: CALIFICADOR_DE_TIPO
   64                            | lista_calificadores_de_tipo CALIFICADOR_DE_TIPO

   65 lista_tipos_de_parametro: lista_de_parametros
   66                         | lista_de_parametros ',' ELIPSIS

   67 lista_de_parametros: declaracion_parametro
   68                    | lista_de_parametros ',' declaracion_parametro

   69 declaracion_parametro: especificadores_de_declaracion declarador
   70                      | especificadores_de_declaracion declarador_abstracto
   71                      | especificadores_de_declaracion

   72 lista_de_identificadores: IDENTIFICADOR
   73                         | lista_de_identificadores ',' IDENTIFICADOR

   74 inicializador: expresion_de_asignacion
   75              | '{' lista_de_inicializadores '}'
   76              | '{' lista_de_inicializadores ',' '}'

   77 lista_de_inicializadores: inicializador
   78                         | lista_de_inicializadores ',' inicializador

   79 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
   80               | lista_calificador_especificador

   81 declarador_abstracto: apuntador
   82                     | apuntador declarador_abstracto_directo
   83                     | declarador_abstracto_directo

   84 declarador_abstracto_directo: '(' declarador_abstracto ')'
   85                             | declarador_abstracto_directo '[' expresion_constante ']'
   86                             | '[' expresion_constante ']'
   87                             | declarador_abstracto_directo '[' ']'
   88                             | '[' ']'
   89                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
   90                             | '(' lista_tipos_de_parametro ')'
   91                             | declarador_abstracto_directo '(' ')'
   92                             | '(' ')'

   93 proposicion: proposicion_etiquetada
   94            | proposicion_expresion
   95            | proposicion_compuesta
   96            | proposicion_de_seleccion
   97            | proposicion_de_iteracion
   98            | proposicion_de_salto

   99 proposicion_etiquetada: IDENTIFICADOR ':' proposicion
  100                       | CASE expresion_constante ':' proposicion
  101                       | DEFAULT ':' proposicion

  102 proposicion_expresion: opt_expresion ';'

  103 proposicion_compuesta: '{' lista_de_declaraciones lista_de_proposiciones '}'
  104                      | '{' lista_de_proposiciones '}'
  105                      | '{' lista_de_declaraciones '}'
  106                      | '{' '}'

  107 lista_de_proposiciones: proposicion
  108                       | lista_de_proposiciones proposicion

  109 proposicion_de_seleccion: IF '(' expresion ')' proposicion
  110                         | IF '(' expresion ')' proposicion ELSE proposicion
  111                         | SWITCH '(' expresion ')' proposicion

  112 proposicion_de_iteracion: WHILE '(' expresion ')' proposicion
  113                         | DO proposicion WHILE '(' expresion ')' ';'
  114                         | FOR '(' opt_expresion ';' opt_expresion ';' opt_expresion ')' proposicion

  115 opt_expresion: expresion
  116              | /* vacío */

  117 proposicion_de_salto: GOTO IDENTIFICADOR ';'
  118                     | CONTINUE ';'
  119                     | BREAK ';'
  120                     | RETURN opt_expresion ';'

  121 expresion: expresion_de_asignacion
  122          | expresion ',' expresion_de_asignacion

  123 expresion_de_asignacion: expresion_condicional
  124                        | expresion_unaria '=' expresion_de_asignacion

  125 expresion_condicional: expresion_logica_OR
  126                      | expresion_logica_OR '?' expresion ':' expresion_condicional

  127 expresion_constante: expresion_condicional

  128 expresion_logica_OR: expresion_logica_AND
  129                    | expresion_logica_OR OR expresion_logica_AND

  130 expresion_logica_AND: expresion_OR_inclusivo
  131                     | expresion_logica_AND AND expresion_OR_inclusivo

  132 expresion_OR_inclusivo: expresion_OR_exclusivo
  133                       | expresion_OR_inclusivo '|' expresion_OR_exclusivo

  134 expresion_OR_exclusivo: expresion_AND
  135                       | expresion_OR_exclusivo '^' expresion_AND

  136 expresion_AND: expresion_de_igualdad
  137              | expresion_AND '&' expresion_de_igualdad

  138 expresion_de_igualdad: expresion_relacional
  139                      | expresion_de_igualdad IGUALDAD expresion_relacional
  140                      | expresion_de_igualdad DISTINTO expresion_relacional

  141 expresion_relacional: expresion_de_corrimiento
  142                     | expresion_relacional '<' expresion_de_corrimiento
  143                     | expresion_relacional '>' expresion_de_corrimiento
  144                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  145                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  146 expresion_de_corrimiento: expresion_aditiva
  147                         | expresion_de_corrimiento DESPLAZAMIENTO_A_IZQUIERDA expresion_aditiva
  148                         | expresion_de_corrimiento DESPLAZAMIENTO_A_DERECHA expresion_aditiva

  149 expresion_aditiva: expresion_multiplicativa
  150                  | expresion_aditiva '+' expresion_multiplicativa
  151                  | expresion_aditiva '-' expresion_multiplicativa

  152 expresion_multiplicativa: expresion_cast
  153                         | expresion_multiplicativa '*' expresion_cast
  154                         | expresion_multiplicativa '/' expresion_cast
  155                         | expresion_multiplicativa '%' expresion_cast

  156 expresion_cast: expresion_unaria
  157               | '(' nombre_de_tipo ')' expresion_cast

  158 expresion_unaria: expresion_posfija
  159                 | INCREMENTO expresion_unaria
  160                 | DECREMENTO expresion_unaria
  161                 | OPERADOR_UNARIO expresion_cast
  162                 | SIZEOF expresion_unaria
  163                 | SIZEOF '(' nombre_de_tipo ')'

  164 expresion_posfija: expresion_primaria
  165                  | expresion_posfija '[' expresion ']'
  166                  | expresion_posfija '(' lista_de_expresiones_argumento ')'
  167                  | expresion_posfija '(' ')'
  168                  | expresion_posfija '.' IDENTIFICADOR
  169                  | expresion_posfija APUNTA IDENTIFICADOR
  170                  | expresion_posfija INCREMENTO
  171                  | expresion_posfija DECREMENTO

  172 expresion_primaria: IDENTIFICADOR
  173                   | constante
  174                   | CADENA
  175                   | '(' expresion ')'

  176 lista_de_expresiones_argumento: expresion_de_asignacion
  177                               | lista_de_expresiones_argumento ',' expresion_de_asignacion

  178 constante: CONSTANTE_ENTERA
  179          | CONSTANTE_CARACTER
  180          | CONSTANTE_FLOTANTE


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33)
'%' (37) 155
'&' (38) 137
'(' (40) 53 56 57 58 84 89 90 91 92 109 110 111 112 113 114 157 163
    166 167 175
')' (41) 53 56 57 58 84 89 90 91 92 109 110 111 112 113 114 157 163
    166 167 175
'*' (42) 59 60 153
'+' (43) 150
',' (44) 32 41 47 66 68 73 76 78 122 177
'-' (45) 151
'.' (46) 168
'/' (47) 154
':' (58) 99 100 101 126
';' (59) 9 10 35 102 113 114 117 118 119 120
'<' (60) 142
'=' (61) 34 49 124
'>' (62) 143
'?' (63) 126
'[' (91) 54 55 85 86 87 88 165
']' (93) 54 55 85 86 87 88 165
'^' (94) 135
'{' (123) 26 27 43 44 75 76 103 104 105 106
'|' (124) 133
'}' (125) 26 27 43 44 75 76 103 104 105 106
'~' (126)
error (256)
TIPO_DE_DATO (258) 23
IDENTIFICADOR (259) 26 28 43 45 48 49 52 72 73 99 117 168 169 172
CALIFICADOR_DE_TIPO (260) 15 38 39 63 64
STRUCT_O_UNION (261) 26 27 28
ENUM (262) 43 44 45
ELIPSIS (263) 66
CASE (264) 100
DEFAULT (265) 101
IF (266) 109 110
SWITCH (267) 111
ELSE (268) 110
DO (269) 113
WHILE (270) 112 113
FOR (271) 114
GOTO (272) 117
CONTINUE (273) 118
BREAK (274) 119
RETURN (275) 120
OPERADOR_DE_ASIGNACION (276)
OR (277) 129
AND (278) 131
IGUALDAD (279) 139
DISTINTO (280) 140
MENOR_IGUAL (281) 144
MAYOR_IGUAL (282) 145
DESPLAZAMIENTO_A_DERECHA (283) 148
DESPLAZAMIENTO_A_IZQUIERDA (284) 147
INCREMENTO (285) 159 170
DECREMENTO (286) 160 171
SIZEOF (287) 162 163
OPERADOR_UNARIO (288) 161
APUNTA (289) 169
CADENA (290) 174
CONSTANTE_ENTERA (291) 178
CONSTANTE_CARACTER (292) 179
CONSTANTE_FLOTANTE (293) 180
AUTO (294) 16
REGISTER (295) 17
STATIC (296) 18
EXTERN (297) 19
TYPEDEF (298) 20
THEN (299)


No terminales con las reglas donde aparecen

$accept (69)
    en la izquierda: 0
unidad_de_traduccion (70)
    en la izquierda: 1 2, en la derecha: 0 2
declaracion_externa (71)
    en la izquierda: 3 4, en la derecha: 1 2
definicion_de_funcion (72)
    en la izquierda: 5 6 7 8, en la derecha: 3
declaracion (73)
    en la izquierda: 9 10, en la derecha: 4 11 12
lista_de_declaraciones (74)
    en la izquierda: 11 12, en la derecha: 5 7 12 103 105
especificadores_de_declaracion (75)
    en la izquierda: 13 14 15, en la derecha: 5 6 9 10 21 69 70 71
especificador_de_categoria_de_almacenamiento (76)
    en la izquierda: 16 17 18 19 20, en la derecha: 13
opt_especificadores_de_declaracion (77)
    en la izquierda: 21 22, en la derecha: 13 14 15
especificador_de_tipo (78)
    en la izquierda: 23 24 25, en la derecha: 14 36 37
especificador_estructura_o_union (79)
    en la izquierda: 26 27 28, en la derecha: 24
lista_declaraciones_struct (80)
    en la izquierda: 29 30, en la derecha: 26 27 30
lista_declaradores_init (81)
    en la izquierda: 31 32, en la derecha: 9 32
declarador_init (82)
    en la izquierda: 33 34, en la derecha: 31 32
declaracion_struct (83)
    en la izquierda: 35, en la derecha: 29 30
lista_calificador_especificador (84)
    en la izquierda: 36 37 38 39, en la derecha: 35 36 38 79 80
lista_declaradores_struct (85)
    en la izquierda: 40 41, en la derecha: 35 41
declarador_struct (86)
    en la izquierda: 42, en la derecha: 40 41
especificador_enum (87)
    en la izquierda: 43 44 45, en la derecha: 25
lista_de_enumerador (88)
    en la izquierda: 46 47, en la derecha: 43 44 47
enumerador (89)
    en la izquierda: 48 49, en la derecha: 46 47
declarador (90)
    en la izquierda: 50 51, en la derecha: 5 6 7 8 33 34 42 53 69
declarador_directo (91)
    en la izquierda: 52 53 54 55 56 57 58, en la derecha: 50 51 54
    55 56 57 58
apuntador (92)
    en la izquierda: 59 60, en la derecha: 50 60 81 82
opt_lista_calificadores_de_tipo (93)
    en la izquierda: 61 62, en la derecha: 59 60
lista_calificadores_de_tipo (94)
    en la izquierda: 63 64, en la derecha: 61 64
lista_tipos_de_parametro (95)
    en la izquierda: 65 66, en la derecha: 56 89 90
lista_de_parametros (96)
    en la izquierda: 67 68, en la derecha: 65 66 68
declaracion_parametro (97)
    en la izquierda: 69 70 71, en la derecha: 67 68
lista_de_identificadores (98)
    en la izquierda: 72 73, en la derecha: 57 73
inicializador (99)
    en la izquierda: 74 75 76, en la derecha: 34 77 78
lista_de_inicializadores (100)
    en la izquierda: 77 78, en la derecha: 75 76 78
nombre_de_tipo (101)
    en la izquierda: 79 80, en la derecha: 157 163
declarador_abstracto (102)
    en la izquierda: 81 82 83, en la derecha: 70 79 84
declarador_abstracto_directo (103)
    en la izquierda: 84 85 86 87 88 89 90 91 92, en la derecha: 82
    83 85 87 89 91
proposicion (104)
    en la izquierda: 93 94 95 96 97 98, en la derecha: 99 100 101 107
    108 109 110 111 112 113 114
proposicion_etiquetada (105)
    en la izquierda: 99 100 101, en la derecha: 93
proposicion_expresion (106)
    en la izquierda: 102, en la derecha: 94
proposicion_compuesta (107)
    en la izquierda: 103 104 105 106, en la derecha: 5 6 7 8 95
lista_de_proposiciones (108)
    en la izquierda: 107 108, en la derecha: 103 104 108
proposicion_de_seleccion (109)
    en la izquierda: 109 110 111, en la derecha: 96
proposicion_de_iteracion (110)
    en la izquierda: 112 113 114, en la derecha: 97
opt_expresion (111)
    en la izquierda: 115 116, en la derecha: 102 114 120
proposicion_de_salto (112)
    en la izquierda: 117 118 119 120, en la derecha: 98
expresion (113)
    en la izquierda: 121 122, en la derecha: 109 110 111 112 113 115
    122 126 165 175
expresion_de_asignacion (114)
    en la izquierda: 123 124, en la derecha: 74 121 122 124 176 177
expresion_condicional (115)
    en la izquierda: 125 126, en la derecha: 123 126 127
expresion_constante (116)
    en la izquierda: 127, en la derecha: 49 54 85 86 100
expresion_logica_OR (117)
    en la izquierda: 128 129, en la derecha: 125 126 129
expresion_logica_AND (118)
    en la izquierda: 130 131, en la derecha: 128 129 131
expresion_OR_inclusivo (119)
    en la izquierda: 132 133, en la derecha: 130 131 133
expresion_OR_exclusivo (120)
    en la izquierda: 134 135, en la derecha: 132 133 135
expresion_AND (121)
    en la izquierda: 136 137, en la derecha: 134 135 137
expresion_de_igualdad (122)
    en la izquierda: 138 139 140, en la derecha: 136 137 139 140
expresion_relacional (123)
    en la izquierda: 141 142 143 144 145, en la derecha: 138 139 140
    142 143 144 145
expresion_de_corrimiento (124)
    en la izquierda: 146 147 148, en la derecha: 141 142 143 144 145
    147 148
expresion_aditiva (125)
    en la izquierda: 149 150 151, en la derecha: 146 147 148 150 151
expresion_multiplicativa (126)
    en la izquierda: 152 153 154 155, en la derecha: 149 150 151 153
    154 155
expresion_cast (127)
    en la izquierda: 156 157, en la derecha: 152 153 154 155 157 161
expresion_unaria (128)
    en la izquierda: 158 159 160 161 162 163, en la derecha: 124 156
    159 160 162
expresion_posfija (129)
    en la izquierda: 164 165 166 167 168 169 170 171, en la derecha:
    158 165 166 167 168 169 170 171
expresion_primaria (130)
    en la izquierda: 172 173 174 175, en la derecha: 164
lista_de_expresiones_argumento (131)
    en la izquierda: 176 177, en la derecha: 166 177
constante (132)
    en la izquierda: 178 179 180, en la derecha: 173


estado 0

    0 $accept: . unidad_de_traduccion $end

    TIPO_DE_DATO         desplazar e ir al estado 1
    IDENTIFICADOR        desplazar e ir al estado 2
    CALIFICADOR_DE_TIPO  desplazar e ir al estado 3
    STRUCT_O_UNION       desplazar e ir al estado 4
    ENUM                 desplazar e ir al estado 5
    AUTO                 desplazar e ir al estado 6
    REGISTER             desplazar e ir al estado 7
    STATIC               desplazar e ir al estado 8
    EXTERN               desplazar e ir al estado 9
    TYPEDEF              desplazar e ir al estado 10
    '*'                  desplazar e ir al estado 11
    '('                  desplazar e ir al estado 12

    unidad_de_traduccion                          ir al estado 13
    declaracion_externa                           ir al estado 14
    definicion_de_funcion                         ir al estado 15
    declaracion                                   ir al estado 16
    especificadores_de_declaracion                ir al estado 17
    especificador_de_categoria_de_almacenamiento  ir al estado 18
    especificador_de_tipo                         ir al estado 19
    especificador_estructura_o_union              ir al estado 20
    especificador_enum                            ir al estado 21
    declarador                                    ir al estado 22
    declarador_directo                            ir al estado 23
    apuntador                                     ir al estado 24


estado 1

   23 especificador_de_tipo: TIPO_DE_DATO .

    $default  reduce usando la regla 23 (especificador_de_tipo)


estado 2

   52 declarador_directo: IDENTIFICADOR .

    $default  reduce usando la regla 52 (declarador_directo)


estado 3

   15 especificadores_de_declaracion: CALIFICADOR_DE_TIPO . opt_especificadores_de_declaracion

    TIPO_DE_DATO         desplazar e ir al estado 1
    CALIFICADOR_DE_TIPO  desplazar e ir al estado 3
    STRUCT_O_UNION       desplazar e ir al estado 4
    ENUM                 desplazar e ir al estado 5
    AUTO                 desplazar e ir al estado 6
    REGISTER             desplazar e ir al estado 7
    STATIC               desplazar e ir al estado 8
    EXTERN               desplazar e ir al estado 9
    TYPEDEF              desplazar e ir al estado 10

    $default  reduce usando la regla 22 (opt_especificadores_de_declaracion)

    especificadores_de_declaracion                ir al estado 25
    especificador_de_categoria_de_almacenamiento  ir al estado 18
    opt_especificadores_de_declaracion            ir al estado 26
    especificador_de_tipo                         ir al estado 19
    especificador_estructura_o_union              ir al estado 20
    especificador_enum                            ir al estado 21


estado 4

   26 especificador_estructura_o_union: STRUCT_O_UNION . IDENTIFICADOR '{' lista_declaraciones_struct '}'
   27                                 | STRUCT_O_UNION . '{' lista_declaraciones_struct '}'
   28                                 | STRUCT_O_UNION . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 27
    '{'            desplazar e ir al estado 28


estado 5
